truffle/src/com.oracle.truffle.sl.test/src/tests/error/InvalidAssignmentInIfCond.sl
function double(x) {
  return 2 * x;
}

function main() {
  if (double(2) = 4) {
    42;
  }
}